--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ body {
 
 .bottom-row {
   grid-area: 3 / 2 / 4 / 3;
-  
+
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -62,6 +62,10 @@ body {
   grid-area: 2 / 1 / 3 / 2;
 }
 
+.nav {
+  grid-area: 4 / 2 / 5 / 3;
+}
+
 .bottom-row-items:nth-child(1) {
   display: block;
   flex-grow: 0;
@@ -87,11 +91,45 @@ body {
   flex-basis: auto;
   align-self: auto;
   order: 0;
+}
+
+#sudo-code {
   padding: 1em;
   background-color: #C7EBFC;
-  /* font-family: Roboto Mono; */
+}
+
+#operations {
+  padding: 1em;
+  background-color: #fcc7eb;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: stretch;
+  align-content: stretch;
+}
+
+.operation {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+
+  text-align: center;
+  margin: auto;
 }
 
 .highlighted-text {
   background-color: #ffed99;
 }
+
+/* 
+triadic colors
+maybe use these in ui
+#ebfcc7
+#fcc7eb
+#C7EBFC 
+*/
