--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
   --light-green: #EAFCC5;
   --pink: #FCC5EA;
   --black: black;
+  --sudo-code-rectangle-width: 1rem;
 }
 
 html,
@@ -106,14 +107,34 @@ body {
   padding: 1em;
   background-color: var(--light-blue);
 }
+
 /* This is meant to be used in the animation code to
 display the pseudo code for the algorithm being
 animated. */
-#sudo-code > div {
+#sudo-code>div {
   display: none;
 }
-#sudo-code > div.active {
+#sudo-code>div.active {
   display: block;
+}
+#sudo-code-rectangle {
+  position: absolute;
+  /* or absolute, fixed, or sticky */
+  z-index: 1;
+  width: 1rem;
+  height: 1lh;
+  background-color: var(--highlighted-text);
+  left: 0;
+}
+#insert-sudo-code {
+  position: relative;
+  /* or absolute, fixed, or sticky */
+  z-index: 2;
+}
+.sudo-code-line {
+  padding-left: 1rem;
+  z-index: 2;
+  position: relative;
 }
 
 #operations {
@@ -144,13 +165,15 @@ animated. */
   background-color: var(--highlighted-text);
 }
 
-.green-node{
+.green-node {
   fill: #ebfcc7;
   stroke: var(--black);
 }
+
 .node {
   stroke: var(--black);
 }
+
 .node-key-text {
   dominant-baseline: middle;
   text-anchor: middle;
