--- a/src/style.css
+++ b/src/style.css
@@ -24,49 +24,20 @@ body {
 /* grid.layoutit.com?id=rsXbSgO */
 .container {
   display: grid;
-  grid-template-columns: 0.1fr 3.8fr 0.1fr;
-  grid-template-rows: 1fr max-content max-content;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1.8fr 0.2fr max-content max-content;
+  grid-auto-rows: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-  gap: px 0px;
+  grid-template-areas:
+    "main-svg"
+    "controls";
   width: 100%;
   height: 100vh;
 }
 
-.middle {
-  display: grid;
-  grid-template-columns: 0.5fr 1.4fr max-content;
-  grid-template-rows: max-content;
-  gap: 0px 0px;
-  grid-template-areas:
-    "controls . sudo-code";
-  grid-area: 2 / 2 / 3 / 3;
-  z-index: 2;
-}
-
 .controls {
   grid-area: controls;
-}
-
-.sudo-code {
-  grid-area: sudo-code;
-  background-color: var(--light-blue);
-}
-
-.Animation-Controls {
-  grid-area: 3 / 2 / 4 / 3;
-}
-
-.main-svg {
-  grid-area: 1 / 1 / 3 / 4;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-
-.bottom-row {
-  grid-area: 3 / 2 / 4 / 3;
-
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -76,57 +47,14 @@ body {
   margin: 0.5em;
 }
 
-/* end of grid */
-
-.operation-sudo-code {
-  padding: 0;
-  margin: 1em;
-  opacity: 0;
-  position: relative;
-  padding-left: 1em;
-}
-
-.sudo-code-rectangle {
-  position: absolute;
-  /* or absolute, fixed, or sticky */
+.main-svg {
+  grid-area: main-svg;
+  width: 100%;
+  height: 100%;
   z-index: 1;
-  width: var(--sudo-code-rectangle-width);
-  height: 1lh;
-  background-color: var(--highlighted-text);
-  left: 0;
 }
 
-.sudo-code-line {
-  z-index: 2;
-  position: relative;
-}
-
-#operations {
-  padding: 1em;
-  background-color: var(--pink);
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: stretch;
-  align-content: stretch;
-}
-
-.operation {
-  display: block;
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  align-self: auto;
-  order: 0;
-
-  text-align: center;
-  margin: auto;
-}
-
-.highlighted-text {
-  background-color: var(--highlighted-text);
-}
+/* end of grid */
 
 .green-node {
   fill: #ebfcc7;
